<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EventDiary_v2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username_hint">Name</string>
    <string name="pass_hint">Password</string>
    <string name="conpass_hint">Confirm Password for Registration</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    
</resources>
